# RuC

./: CMakeLists.txt
.github/workflows/: main.yml
libs/compiler/: compiler.c  errors.h  llvmgen.c  llvmopt.c  parser.h
src/: global_vars.h  main.c  optimizer.c
tests/executable/include/cmake/: CMakeLists.txt  library.c  library.h
tests/executable/include/cmake/CMake/: CMakeDetermineRUCCompiler.cmake  CMakeRUCCompiler.cmake.in  CMakeRUCInformation.cmake  CMakeTestRUCCompiler.cmake
tests/mips/optimizations/productivity/: big_matrix100.c  big_matrix400.c  big_matrix50.c  big_matrix800.c
